styling menu content to match mobile design

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2164,6 +2164,7 @@ en:
     topbar:
       menu: Menu
       search_placeholder: Search...
+      user: User
   will_paginate:
     models:
       person:
