--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2165,6 +2165,11 @@ en:
       menu: Menu
       search_placeholder: Search...
       user: User
+      inbox: Inbox
+      profile: Profile
+      manage_listings: "Manage listings"
+      settings: Settings
+      logout: Log out
   will_paginate:
     models:
       person:
